# avida-core

./: AUTHORS  Alice_CMakeLists.txt  Avida.sln  Avida.vcproj  CMakeLists.txt  CONFIG  COPYING  ChangeLog  Changelog  FILES  HPC_CMakeLists.txt  INSTALL  LICENSE  Makefile.am  Makefile.cvs  NEWS  README  README.cvs  avida_doc.rules  bootstrap  build_avida  configure.in  hpc_build_avida  run_consistencytests  status.xml  test_avida
doc/: Makefile.am  analyze_mode.html  analyze_samples.html  code_c++_intro.html  code_death_birth.html  code_environment.html  code_events.html  code_genesis.html  code_genome.html  code_init_file.html  code_instruction.html  code_life_cycle.html  code_task.html  cpu_tour.html  cvs.html  devel.html  environment.html  events.html  genesis.html  index.html  inst_set.html  level_map.html  print_data.html  screen.html  structure.html
doc/glossary/: Makefile.am
source/: LEVELS  Makefile  Makefile.am  Makefile.in  configure  defs.h  defs.hh  depend  modules.pri
source/actions/: CMakeLists.txt  DemeActions.h  DriverActions.cc  EnvironmentActions.cc  LandscapeActions.cc  LineageActions.cc  LineageActions.h  PopulationActions.cc  PrintActions.cc  cActionLibrary.cc
source/analyze/: cAnalyze.cc  cAnalyze.h  cAnalyzeGenotype.cc  cAnalyzeGenotype.h  cAnalyzeJobQueue.cc  cModularityAnalysis.cc  cMutationalNeighborhood.cc
source/classification/: cBioUnit.cc  cBioUnit.h  cClassificationManager.cc  cGenotype.cc  cGenotype.h  cGenotype_BirthData.h  cInjectGenotype.cc  cSpecies.cc
source/cpu/: Makefile.am  cCPUMemory.cc  cCPUMemory.h  cHardware4Stack.cc  cHardwareBase.cc  cHardwareBase.h  cHardwareCPU.cc  cHardwareCPU.h  cHardwareExperimental.cc  cHardwareExperimental.h  cHardwareFactory.cc  cHardwareGX.cc  cHardwareGX.h  cHardwareSMT.cc  cHardwareSMT.h  cHardwareTransSMT.cc  cHeadCPU.cc  cHeadCPU.h  cHeadMultiMem.cc  cHeadMultiMem.h  cInstLib.h  cInstSet.cc  cInstSet.h  cOrganismThread.cpp  cOrganismThread.h  cTestCPU.cc  cTestCPU.h  cTestCPUInterface.h  cpu.cc  cpu.hh  cpu.ii  cpu.pri  cpu_defs.hh  cpu_memory.cc  cpu_memory.hh  cpu_stack.cc  cpu_stack.hh  cpu_stats.hh  creature.hh  environment.cc  (+28 more)
source/event/: Makefile.am  avida_main_event_handler.cc  avida_main_event_handler.hh  cAvidaMainEvents_auto  cPopulation.events  cPopulationEventFactory.cc  cPopulationEvents_auto  cPopulation_construct_event_auto.ci  cPopulation_descr.ci  cPopulation_descr.hi  cPopulation_enums_auto.ci  cPopulation_event_list  cPopulation_name2enum_auto.ci  cPopulation_process_auto.ci  event.hh  event.pri  event_base.hh  event_defs.hh  event_factory.cc  event_factory.hh  event_factory_manager.cc  event_factory_manager.hh  event_handler.cc  event_handler.hh  event_ipc.cc  event_ipc.hh  event_list.cc  event_list.hh  event_manager.cc  event_manager.hh  events.cc  events.hh  make_events.pl  population_event_factory.cc  population_event_factory.hh  population_event_handler.cc  population_event_handler.hh
source/main/: Avida.h  Makefile.am  analyze.cc  analyze.hh  analyze_util.cc  analyze_util.hh  avida.cc  avida.hh  birth_chamber.cc  birth_chamber.hh  cAnalyze.cc  cAnalyze.h  cAnalyzeGenotype.cc  cAnalyzeGenotype.h  cAvidaConfig.cc  cAvidaConfig.h  cAvidaContext.h  cBirthChamber.cc  cDeme.cc  cDeme.h  cDemeCellEvent.cc  cDemeCompetitions.cc  cDemeCompetitions.h  cEnvironment.cc  cEnvironment.h  cEventList.h  cGenome.cc  cGenome.h  cGenomeUtil.cc  cGermline.h  cInstruction.h  cLandscape.cc  cLandscape.h  cMDEAbsenceProperty.cc  cMDEAbsenceProperty.h  cMDECompoundExpression.h  cMDEExistenceProperty.cc  cMDEExistenceProperty.h  cMDEExpression.h  cMDEExpressionAttribute.h  (+139 more)
source/python/: CMakeLists.txt  setup_osx.py.in
source/qt-viewer/: Makefile.am  apocalypse_widget.cc  avd_avida_driver.cc  avd_avida_driver.hh  avd_driver_controller.cc  avd_event_viewer_controller.cc  avd_godbox_controller.cc  avd_help_controller.cc  avd_help_viewer.cc  avd_instruction_viewer_controller.cc  avd_main_window.cc  avd_main_window_controller.cc  avd_message_display.cc  avd_mission_control.cc  avd_plot_viewer_controller.cc  avd_rate_validator2.cc  avida_data.cc  avida_plot_widget.cc  event_view_widget.cc  godbox_widget2.cc  gui_message_display.cc  map_view.cc  map_view.hh  map_view_cell_entry.cc  map_view_widget.cc  map_view_widget.hh  messaging_population_wrapper.cc  n_orig_instruction_buttons_widget.cc  n_orig_instruction_cpu_widget.cc  n_orig_instruction_cpu_widget.hh  n_orig_instruction_line_widget.cc  n_orig_instruction_line_widget.hh  n_orig_instruction_scrollview.cc  n_orig_instruction_scrollview.hh  n_orig_instruction_view_widget.cc  n_orig_instruction_viewer.cc  plot_widget.cc  population_cell_wrapped_accessors.cc  population_cell_wrapper.cc  population_cell_wrapper.hh  (+20 more)
source/support/: Makefile.am  analyze.cfg  creature.heads  event_list  genesis  genesis.heads  inst_set.24.base  inst_set.26.heads.new  inst_set.84.long  inst_set.args  inst_set.big  inst_set.dev  inst_set.full  inst_set.long  inst_set.re  inst_set.red  inst_set.short  inst_set.tiny  inst_set.travc  resource_set  task_set
source/tools/: CMakeLists.txt  Makefile.am  SConscript  assert.cc  assert.hh  b_struct2.cc  b_struct2.hh  block_struct.cc  block_struct.hh  cDoubleSum.h  cException.h  cIntSum.h  cMerit.cc  cMerit.h  cRandom.cc  cRandom.h  cSchedule.h  cTools.h  data_entry.cc  data_entry.hh  data_manager.cc  data_manager.hh  datafile.cc  datafile.hh  debug.cc  debug.hh  debug.ii  file.cc  file.hh  functions.cc  functions.hh  help.cc  help.hh  include.hh  int.hh  ipc.cc  ipc.hh  lookup.cc  lookup.hh  memory.cc  (+43 more)
source/utils/: make_events.pl
source/viewers/: Makefile.am  ansi.cc  ansi.hh  bar_screen.cc  bar_screen.hh  baseview.hh  curses.cc  curses.hh  environment_screen.cc  eview_event_handler.cc  eview_event_handler.hh  externalview.cc  externalview.hh  hist_screen.cc  hist_screen.hh  map_screen.cc  map_screen.hh  menu.cc  menu.hh  ncurses-viewer.ilk  ncurses-viewer.pch  ncurses.cc  ncurses.hh  ncurses_viewer.ncb  ncurses_viewer.sln  ncurses_viewer.vcproj  options_screen.cc  options_screen.hh  primitiveview.hh  stats_screen.cc  (+15 more)
(+528 files in other folders)
