dnl ****************************************
dnl             Initial checks
dnl **************************************** 
dnl checks whether file defs.hh exists
AC_INIT(source/defs.hh)


dnl ****************************************
dnl        Package name and version
dnl ****************************************
AM_INIT_AUTOMAKE(avida, 1.4)


dnl ****************************************
dnl General checks for c-compiler, c++compiler, ...
dnl ****************************************
dnl clear flags for c and c++ compiler
CFLAGS=
CXXFLAGS=
dnl check for c compiler
AC_PROG_CC
dnl check for c++ compiler
AC_PROG_CXX 
dnl check for c preprocessor
AC_PROG_CPP 
dnl check for library generator
AC_PROG_RANLIB


dnl ****************************************
dnl            Configure options
dnl ****************************************

dnl debugging/profiling
AC_ARG_ENABLE(debug, 
  --enable-debug: Compile with debugging symbols, 
  CPPFLAGS="-g -DDEBUG", 
  CPPFLAGS="-O3 -ffast-math")
AC_ARG_ENABLE(gnu-debug, 
  --enable-gnu-debug: Compile with special debugging symbols for the gnu debugger gdb, 
  CPPFLAGS="-ggdb -DDEBUG")
AC_ARG_ENABLE(profile,
  --enable-profile: Compile with profiling symbols, 
  CPPFLAGS="${CPPFLAGS} -pg -a")

dnl viewer
AC_ARG_ENABLE(viewer, 
  --enable-viewer: Compile with ncurses viewer, 
  AC_CHECK_LIB(ncurses,
    getch,
    AC_CHECK_HEADERS(ncurses.h,
      VIEW=ncurses;VIEW_LIBS=-lncurses,
      VIEW=primitive;VIEW_LIBS=),
    VIEW=primitive;VIEW_LIBS=),
  VIEW=primitive;VIEW_LIBS=)

dnl installation
AC_ARG_ENABLE(standard-prefix, 
  --enable-standard-prefix: Switch off overriding of: prefix bindir datadir, 
  ,
  AC_PREFIX_DEFAULT(~+) bindir='${exec_prefix}/work';datadir='${prefix}/work')

dnl Commented out
dnl AC_ARG_ENABLE(subdir-install,
dnl  --enable-subdir-install: Install in sub-directory work instead of in directory parallel to the working directory, 
dnl  AC_PREFIX_DEFAULT(~+))


dnl ****************************************
dnl         Variable substitutions
dnl ****************************************

dnl The following environment variables are imported into the
dnl Makefile (CPPFLAGS is imported automatically).
AC_SUBST(VIEW)
AC_SUBST(VIEW_LIBS)


dnl ****************************************
dnl           Makefile generation
dnl ****************************************
AC_OUTPUT(Makefile source/Makefile
  source/tools/Makefile source/cpu/Makefile
  source/event/Makefile source/viewers/Makefile
  source/main/Makefile source/support/Makefile)

