
SUBDIRS = glossary

htmldir = $(HTMLDIR)
html_DATA = \
  analyze_mode.html \
  analyze_samples.html \
  code_c++_intro.html \
  code_death_birth.html \
  code_environment.html \
  code_events.html \
  code_genesis.html \
  code_genome.html \
  code_init_file.html \
  code_instruction.html \
  code_life_cycle.html \
  code_task.html \
  cpu2.gif \
  cpu_tour.html \
  cvs.html \
  devel.html \
  environment.html \
  events.html \
  genesis.html \
  index.html \
  inst_set.html \
  level_map.html \
  screen.html \
  structure.html \
  print_data.html
   
EXTRA_DIST = $(html_DATA)
   
CLEANFILES = *~

