glossaryhtmldir = $(HTMLDIR)/glossary
glossaryhtml_DATA = \
  components.help \
  help.Bitwise.html \
  help.CPU-cycle.html \
  help.CPU.html \
  help.Complement-Template.html \
  help.Genome.html \
  help.Genotype.html \
  help.Heads.html \
  help.IO.html \
  help.Input-Output.html \
  help.Instruction.html \
  help.Logic.html \
  help.Memory.html \
  help.Mutation.html \
  help.Nop-Head-Notation.html \
  help.Nop-Register-Notation.html \
  help.Organism.html \
  help.Population.html \
  help.Registers.html \
  help.Stack.html \
  help.Tasks.html \
  help.Template.html \
  help.add.html \
  help.dec.html \
  help.h-alloc.html \
  help.h-copy.html \
  help.h-divide.html \
  help.h-search.html \
  help.if-label.html \
  help.if-less.html \
  help.if-n-equ.html \
  help.inc.html \
  help.jmp-head.html \
  help.mov-head.html \
  help.nand.html \
  help.nop-instructions.html \
  help.pop.html \
  help.push.html \
  help.set-flow.html \
  help.shift-l.html \
  help.shift-r.html \
  help.sub.html \
  help.swap-stk.html \
  help.swap.html \
  inst.help \
  notations.help \
  todo.help
   
EXTRA_DIST = $(glossaryhtml_DATA)

