libcpu_a_SOURCES = cpu.cc cpu.hh cpu.ii		\
		head.cc head.hh head.ii		\
                label.cc label.hh		\
		interface.cc interface.hh	\
		environment.cc environment.hh	\
		hardware.cc hardware.hh hardware.ii \
		test_cpu.cc test_cpu.hh		\
		cpu_defs.hh cpu_stats.hh creature.hh


noinst_LIBRARIES = libcpu.a
