libcpu_a_SOURCES = \
  cpu_memory.cc cpu_memory.hh \
  cpu_stack.cc cpu_stack.hh \
  hardware_base.cc hardware_base.hh \
  hardware_cpu.cc hardware_cpu.hh \
  hardware_method.hh \
  hardware_factory.cc hardware_factory.hh \
  hardware_util.cc hardware_util.hh \
  head.cc head.hh \
  label.cc label.hh \
  test_cpu.cc test_cpu.hh \
  test_util.cc test_util.hh \
  cpu_defs.hh \
  cpu_stats.hh

#		hardware_4stack.cc	hardware_4stack.hh 

noinst_LIBRARIES = libcpu.a

EXTRA_DIST = cpu.pri
