libtools_a_SOURCES = string.cc string.hh string.ii \
		string_list.cc string_list.hh      \
		debug.cc debug.hh debug.ii         \
		file.cc file.hh                    \
		help.cc help.hh                    \
		memory.cc memory.hh memory.ii      \
		struct.cc struct.hh                \
		block_struct.cc block_struct.hh    \
		b_struct2.cc b_struct2.hh          \
		tools.cc tools.hh tools.ii         \
		random.cc random.hh random.ii      \
		stat.cc stat.hh                    \
		assert.cc assert.hh                \
		memtrack.cc memtrack.hh            \
		lookup.cc lookup.hh                \
		datafile.cc datafile.hh            \
		ipc.cc ipc.hh                      \
		include.hh functions.hh int.hh     \
		tArray.hh tMatrix.hh tVector.hh    \
		tList.hh

noinst_LIBRARIES = libtools.a
