
libtools_a_SOURCES = block_struct.cc	block_struct.hh \
		b_struct2.cc	b_struct2.hh    \
		data_entry.cc	data_entry.hh	\
		data_manager.cc	data_manager.hh \
		datafile.cc	datafile.hh	\
		file.cc		file.hh         \
		help.cc		help.hh         \
		message_display.cc	message_display.hh	\
    message_display_hdrs.hh \
		merit.cc	merit.hh	\
		random.cc	random.hh	\
		slice.cc	slice.hh	\
		stat.cc		stat.hh         \
		string.cc	string.hh	\
		string_list.cc	string_list.hh	\
		string_util.cc	string_util.hh	\
		tools.cc	tools.hh	\
		weighted_index.cc	weighted_index.hh	\
				functions.hh	\
				int.hh		\
				tArray.hh	\
				tBuffer.hh	\
				tDictionary.hh	\
				tList.hh	\
				tMatrix.hh	\
				tVector.hh \
				win32_mkdir_hack.hh

noinst_LIBRARIES = libtools.a

EXTRA_DIST = tools.pri
